[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2" }
bevy-inspector-egui = "0.26.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# more performance at the cost of very slow compile times
# configuration for the most aggressive optimizations possible
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
